--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_simple"
     android:layout_width="match_parent"
@@ -12,14 +13,14 @@
         android:gravity="center"
         android:text="一张图片"
         android:textColor="#ff3344"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
     <!--只有一个的Banner-->
-    <com.humanheima.hmsimplebanner.widget.SuperBanner
+    <com.brotherd.bannerlibrary.SimpleBanner
         android:id="@+id/simple_single_banner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/text_single"
-        app:num_indicator_bg="@drawable/shape_number_indicator_background" />
+        app:num_indicator_bg="@drawable/shape_number_indicator_background"/>
 
     <TextView
         android:id="@+id/text_multi"
@@ -30,12 +31,12 @@
         android:gravity="center"
         android:text="多张图片"
         android:textColor="#ff3344"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
     <!--多个的Banner-->
-    <com.humanheima.hmsimplebanner.widget.SuperBanner
+    <com.brotherd.bannerlibrary.SimpleBanner
         android:id="@+id/simple_multi_banner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_below="@+id/text_multi" />
+        android:layout_below="@+id/text_multi"/>
 
 </RelativeLayout>
