--- a/app/src/main/res/layout/activity_transform.xml
+++ b/app/src/main/res/layout/activity_transform.xml
@@ -1,119 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_transform"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout>
 
-    <ScrollView
+    <data></data>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/activity_transform"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_default"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"
-                app:banner_point_gravity="bottom|center_horizontal"
-                app:is_num_indicator="true"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <!--方块-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_cube"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"
-                app:banner_point_gravity="bottom|left"/>
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_default"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp"
+                    app:banner_point_gravity="bottom|center_horizontal"
+                    app:is_num_indicator="true" />
 
-            <!--可折叠的-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_accordion"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"
-                app:banner_point_gravity="bottom|right"/>
+                <!--方块-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_cube"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp"
+                    app:banner_point_gravity="bottom|left" />
 
-            <!--快速翻动-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_flip"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"
-                app:banner_point_gravity="center_horizontal|bottom"
-                app:is_num_indicator="true"/>
+                <!--可折叠的-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_accordion"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp"
+                    app:banner_point_gravity="bottom|right" />
 
-            <!--旋转-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_rotate"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--快速翻动-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_flip"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp"
+                    app:banner_point_gravity="center_horizontal|bottom"
+                    app:is_num_indicator="true" />
 
-            <!--透明度-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_alpha"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--旋转-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_rotate"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-            <!--缩放褪去-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_ZoomFade"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--透明度-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_alpha"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-            <!--褪去-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_Fade"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--缩放褪去-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_ZoomFade"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-            <!--缩放中间-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_ZoomCenter"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"
-                app:is_num_indicator="true"/>
+                <!--褪去-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_Fade"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-            <!--缩放-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_zoom"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--缩放中间-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_ZoomCenter"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp"
+                    app:is_num_indicator="true" />
 
-            <!--堆叠-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_Stack"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"
-                app:is_num_indicator="true"/>
+                <!--缩放-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_zoom"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-            <!--堆叠缩放-->
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_ZoomStack"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--堆叠-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_Stack"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp"
+                    app:is_num_indicator="true" />
 
-            <com.brotherd.bannerlibrary.SimpleBanner
-                android:id="@+id/sb_transform_Depth"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="8dp"/>
+                <!--堆叠缩放-->
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_ZoomStack"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-        </LinearLayout>
+                <com.hm.banner.HmBanner
+                    android:id="@+id/sb_transform_Depth"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:layout_marginTop="8dp" />
 
-    </ScrollView>
+            </LinearLayout>
 
-</RelativeLayout>
+        </ScrollView>
+
+    </RelativeLayout>
+</layout>
+
