--- a/app/src/main/res/layout/activity_guide_page.xml
+++ b/app/src/main/res/layout/activity_guide_page.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="16dp"
+            android:textColor="#bdbdbd"
             android:layout_marginTop="40dp"
             android:background="@drawable/bg_jump_over"
             android:padding="8dp"
@@ -30,6 +31,7 @@
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="80dp"
             android:background="@drawable/bg_jump_over"
+            android:textColor="#bdbdbd"
             android:padding="8dp"
             android:text="@string/enter"
             android:visibility="gone"
