--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -44,7 +44,7 @@
             android:layout_height="200dp"
             android:layout_below="@+id/text_multi"
             app:delay_time="3000"
-            app:is_cycle="false"
+            app:is_cycle="true"
             app:point_gravity="left"
             app:point_container_background="@color/colorPrimary"
             app:indicator_height="8dp"
