--- a/app/src/main/res/layout/activity_simple.xml
+++ b/app/src/main/res/layout/activity_simple.xml
@@ -4,54 +4,36 @@
 
     <data></data>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/activity_simple"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/text_single"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="一张图片"
-            android:textColor="#ff3344"
-            android:textSize="16sp" />
-
-        <!--一张图片-->
-        <com.hm.banner.HmBanner
-            android:id="@+id/simple_single_banner"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@+id/text_single"
-            app:num_indicator_bg="@drawable/shape_number_indicator_background" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_multi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/simple_single_banner"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="多张图片"
             android:textColor="#ff3344"
             android:textSize="16sp" />
 
-        <!--多张图片-->
-        <com.hm.banner.HmBanner
-            android:id="@+id/simple_multi_banner"
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@+id/text_multi"
-            app:delay_time="3000"
-            app:is_cycle="true"
-            app:point_gravity="left"
-            app:point_container_background="@color/colorPrimary"
-            app:indicator_height="8dp"
-            app:indicator_margin="8dp"
-            app:indicator_width="8dp" />
+            android:layout_height="200dp" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/btnChangeCurrentItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="改变viewPager的item"
+            android:textAllCaps="false" />
+
+
+    </LinearLayout>
 
 </layout>
 
